--- a/protocol/part4-metadata.qmd
+++ b/protocol/part4-metadata.qmd
@@ -16,7 +16,7 @@ This section defines the metadata fields used to describe spectral reflectance m
 
 | Section | Section Title | Description |
 |---------|-----------------|------------------------------------------------------------|
-| [4.1](part4-metadata.qmd#section4-1) | Metadata Tables | Defines the core metadata tables used in the IHerbSpec Protocol, including Session ([Table 4.1](part4-metadata.qmd#tbl-4-1)), Specimen ([Table 4.2](part4-metadata.qmd#tbl-4-2)), and Tissue ([Table 4.3](part4-metadata.qmd#tbl-4-3)) metadata. |
+| [4.1](part4-metadata.qmd#section4-1) | Metadata Tables | Defines the core metadata tables used in the IHerbSpec Protocol, including session ([Table 4.1](part4-metadata.qmd#tbl-4-1)), specimen ([Table 4.2](part4-metadata.qmd#tbl-4-2)), and tissue ([Table 4.3](part4-metadata.qmd#tbl-4-3)) metadata. |
 | [4.2](part4-metadata.qmd#section4-2) | Controlled Vocabularies | Defines the controlled vocabularies to be applied in metadata fields. Includes Developmental Stage Class Codes ([Table 4.4](#tbl-4-4)), Target Class Codes ([Table 4.5](#tbl-4-5)), Tissue Descriptor Codes ([Table 4.6](#tbl-4-6)), and Background and White Reference Class Codes ([Table 4.7](#tbl-4-7)) |
 | [4.3](part4-metadata.qmd#section4-3) | Guidelines for Data Archiving and Sharing | Guidance on archiving, sharing, and publishing spectral data and metadata, including recommended repositories, formats, and interoperability considerations. |
 
@@ -31,7 +31,7 @@ Tables in Part 4 can be downloaded from [iherbspec.github.io/protocol](https://i
 
 ## 4.1 Metadata Tables {#section4-1}
 
-The three tables below describe the Session, Specimen, and Tissue metadata fields. The “Filename Code” column (e.g., `PI`, `SN`, `SI`, `TC`) indicates the prefix used in filenames for reference (see [Part 3](part3-filenames.qmd)). 
+The three tables below describe the session, specimen, and tissue metadata fields. The “Filename Code” column (e.g., `PI`, `SN`, `SI`, `TC`) indicates the prefix used in filenames for reference (see [Part 3](part3-filenames.qmd)). 
 
 When entering metadata values, the filename code *should not* be prepended to the value (e.g., HUHERYspec1, not PIHUHERYspec1).
 
@@ -112,7 +112,7 @@ Fields describing the type, condition, and position of the tissue measured. Incl
 | `measurementFlags`            | - | Optional | Standardized categorical descriptors of the condition of the tissue within the measurement area. Values are selected from the predefined Tissue Descriptor Codes [Table 4.6](#tbl-4-6). Multiple descriptors should be separated with a pipe character (`|`).<br> Example: `GoodPreservation|PathogenPresent` | ENUM<br> (Table 4.6) |
 | `tissueNotes`               | - | Optional | Free-text field used to record additional observations on the condition of the specimen that may aid interpretation of spectral data. It can be used to clarify or elaborate on descriptors already included in measurementFlags, such as the conditions evidencing the quality of preservation (e.g., a MediumPreservation flag could be explained with the note, 'measurement area discolored and wrinkled'). Notes should specify whether the information applies to the measurement area, the tissue unit, or the specimen as a whole.<br> Examples: `mold in measurement area`, `formaldehyde preserved`   | TEXT |
 | `tissueLocation`              | - | Optional | The location of the target tissue on the herbarium sheet. For mounted tissues, record as an `X,Y` coordinate in centimeters, with **`0,0` at the top-left corner of the sheet** (e.g., `17,29`; see Fig. 4.2). If the sheet has non-square angles, align it flush with the left-side ruler. For unmounted tissues, provide a descriptive note indicating location.<br> Examples: `17,29`, `envelope TCAD_TN1`     | TEXT<br> (coordinates preferred) |
-| `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata.<br> Example: `Amazing specimen.`  | TEXT |
+| `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata.<br> Example: `Prominent secondary veins.`  | TEXT |
 | `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file.<br> Example: `0001`               | TEXT |
 
 ![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Table 4.3: Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.jpg){#f4-2 fig-align="center"}
